structmeta-tests/tests/compile_fail/struct_meta/unexpected_unnamed_argument.rs
#[structmeta_tests::attr_optional_name_value(10)]
fn my_func() {}

fn main() {}
