structmeta-tests/tests/compile_fail/struct_meta/unexpected_unnamed_argument.stderr
error: too many unnamed arguments.
 --> $DIR/unexpected_unnamed_argument.rs:1:46
  |
1 | #[structmeta_tests::attr_optional_name_value(10)]
  |                                              ^^
